@@ -1,1 +1,6 @@
-This package provides a zope security policy.
+This package provides management views for ``zope.securitypolicy``.
+It's intended to be used within the "ZMI-based" browser interface.
+
+It used to contain a security policy implementation ages ago, but the
+implementation was moved to the UI-independent ``zope.securitypolicy``
+package.
