@@ -1,9 +1,0 @@
-persistent
-zope.app
-zope.configuration
-zope.interface
-zope.proxy
-zope.publisher
-zope.schema
-zope.security
-zope.testing
