@@ -1,25 +1,0 @@
-##############################################################################
-#
-# Copyright (c) 2004 Zope Corporation and Contributors.
-# All Rights Reserved.
-#
-# This software is subject to the provisions of the Zope Public License,
-# Version 2.0 (ZPL).  A copy of the ZPL should accompany this distribution.
-# THIS SOFTWARE IS PROVIDED "AS IS" AND ANY AND ALL EXPRESS OR IMPLIED
-# WARRANTIES ARE DISCLAIMED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-# WARRANTIES OF TITLE, MERCHANTABILITY, AGAINST INFRINGEMENT, AND FITNESS
-# FOR A PARTICULAR PURPOSE.
-#
-##############################################################################
-"""Grant info
-
-$Id$
-"""
-
-import zope.deferredimport
-
-zope.deferredimport.deprecated(
-    "It has moved to zope.securitypolicy.grantinfo  This reference will be "
-    "removed somedays",
-    AnnotationGrantInfo = 'zope.securitypolicy.grantinfo:AnnotationGrantInfo',
-    )
