@@ -1,2 +1,0 @@
-#
-# This file is necessary to make this directory a package.
