@@ -1,6 +1,0 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope">
-
-  <include package="zope.app.securitypolicy.browser.tests" file="functional.zcml"/>
-
-</configure>
