@@ -1,6 +1,0 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope">
-
-  <include package="zope.securitypolicy.tests" file="mapping.zcml"/>
- 
-</configure>
