@@ -1,7 +1,0 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope"
-    i18n_domain="zope">
-
-  <include package="zope.securitypolicy.tests" file="role.zcml"/>
- 
-</configure>
